--- a/Geneticism/Geneticism.csproj
+++ b/Geneticism/Geneticism.csproj
@@ -47,18 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accuracy\MutationProbabilityFinder.cs" />
-    <Compile Include="Core\FamilialUnit.cs" />
     <Compile Include="Core\Globals.cs" />
-    <Compile Include="Core\Interface\IMutatable.cs" />
-    <Compile Include="Core\Interface\IPopulationManager.cs" />
-    <Compile Include="Core\Interface\IPopulationUnit.cs" />
-    <Compile Include="Core\PopulationManager.cs" />
-    <Compile Include="Core\PopulationStruct.cs" />
-    <Compile Include="Core\PopulationUnit.cs" />
     <Compile Include="Core\Tools\StructTools.cs" />
     <Compile Include="Core\ThreadRandom.cs" />
     <Compile Include="Managers\StringUnitPopulationManager.cs" />
-    <Compile Include="Units\StringStructFamilialUnit.cs" />
+    <Compile Include="Performance\PerformanceTester.cs" />
     <Compile Include="Units\StringFamilialUnit.cs" />
     <Compile Include="Units\StringUnit.cs" />
     <Compile Include="Program.cs" />
@@ -69,6 +62,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Core\Interface\" />
     <Folder Include="Statistics\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
